syntax = "proto3";

package identity.authapi.v1;

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
    string totp_code = 3;
}

message LoginResponse {
    string token = 1;
}